# UAV_2019

./: CMakeLists.txt  README.md
common/: HeightMap.cpp  HeightMap.h
demos/: CMakeLists.txt
demos/sim_Tractor/: CMakeLists.txt  UAV.cpp  UAV.h  rLabServer.cpp  rLabServer.h  sim_Tractor.cpp  stdafx.cpp
devices/: CMakeLists.txt
devices/rDeviceCombineDrive/: CMakeLists.txt  rDeviceCombineDrive.cpp  rDeviceCombineDriveCmd.h
devices/rDeviceTractorDrive/: CMakeLists.txt  rDeviceTractorDrive.cpp  rDeviceTractorDrive.h  rDeviceTractorDriveCmd.h
devices/rDeviceUAVGrid/: CMakeLists.txt  rDeviceUAVGrid.cpp  rDeviceUAVGrid.h
devices/rDeviceUAVPTO/: CMakeLists.txt  rDeviceUAVPTO.cpp  rDeviceUAVPTO.h
devices/rDeviceUAVWaypoints/: CMakeLists.txt  rDeviceUAVWaypoints.cpp  rDeviceUAVWaypoints.h
graphics/: CMakeLists.txt
graphics/rGraphicsUAVGrid/: CMakeLists.txt  rGraphicsUAVGrid.cpp  rGraphicsUAVGrid.h
graphics/rGraphicsUAVWaypoints/: CMakeLists.txt  rGraphicsUAVWaypoints.cpp  rGraphicsUAVWaypoints.h
include/: UAV_cmd.h  UAV_conf.h  UAV_def.h  UAV_hmap.h  UAV_protocol.h
tools/: CMakeLists.txt
tools/HeightMapGen/: HeightMapGen.cpp  HeightMapGen.h  HeightMapGen.rc  HeightMapGen.sln  HeightMapGen.vcproj  HeightMapGenDlg.cpp  HeightMapGenDlg.h  Perlin.cpp  Perlin.h  PictureCtrl.cpp  PictureCtrl.h  resource.h  stdafx.cpp  targetver.h
tools/HeightMapGen/res/: HeightMapGen.rc2
tools/app_UAVClient/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  app_UAVClient.cpp
